--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <body>
     <header>
       <h1>My web 130</h1>
-      <h2>SO much Fun!</h2>
+      <h2>SO much Fun-Fun!</h2>
     </header>
     <div id="main">I am main</div>
     <aside>I am a sidebar</aside>
