--- a/index.html
+++ b/index.html
@@ -3,12 +3,35 @@
     <link rel="stylesheet" href="css/styles.css" type="text/css">
   </head>
   <body>
+  <div id="page">
     <header>
       <h1>My web 130</h1>
       <h2>SO much Fun-Fun!</h2>
+			<nav id="main-menu">
+					<ul>
+						<li><a href="#">Page 1</a>
+              <ul>
+                <li><a href="#">Page 1a</a></li>
+                <li><a href="#">Page 1b</a></li>
+                <li><a href="#">Page 1c</a></li>
+              </ul> 
+            </li>
+						<li><a href="#">Page 2</a>
+              <ul>
+                <li><a href="#">Page 2a</a></li>
+                <li><a href="#">Page 2b</a></li>
+                <li><a href="#">Page 2c</a></li>
+              </ul>
+            </li>
+						<li><a href="#">Page 3</a></li>
+						<li><a href="#">Page 4</a></li>
+						<li><a href="#">Page 5</a></li>
+					</ul>
+				</nav>
     </header>
     <div id="main">I am main</div>
     <aside>I am a sidebar</aside>
     <footer>2014</footer>
+    </div>
   </body>
 </html>
